--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0">
     <title>vux-uploader</title>
+    <script type="text/javascript" src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
   </head>
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+    <script>window.VConsole = new VConsole();</script>
   </body>
 </html>
