--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0">
     <title>vux-uploader</title>
-    <script type="text/javascript" src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
+    <script type="text/javascript" src="https://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
   </head>
   <body>
     <div id="app"></div>
