--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./example/build.js"></script>
+    <script src="./demo/build.js"></script>
   </body>
 </html>
